--- a/themes/beautifulhugo/layouts/_default/single.html
+++ b/themes/beautifulhugo/layouts/_default/single.html
@@ -6,6 +6,7 @@
         {{ .Content }}
       </article>
 
+{{if eq .Section "posts"}}
       <ul class="pager blog-pager">
         {{ if .PrevInSection }}
           <li class="previous">
@@ -18,6 +19,7 @@
           </li>
         {{ end }}
       </ul>
+{{ end }}
 
       {{ if (.Params.comments) | or (and (or (not (isset .Params "comments")) (eq .Params.comments nil)) (.Site.Params.comments)) }}
         {{ if .Site.DisqusShortname }}
