--- a/themes/beautifulhugo/layouts/_default/single.html
+++ b/themes/beautifulhugo/layouts/_default/single.html
@@ -6,7 +6,7 @@
         {{ .Content }}
       </article>
 
-{{if eq .Section "post"}}
+{{ if .Type | eq "post" }}
       <ul class="pager blog-pager">
         {{ if .PrevInSection }}
           <li class="previous">
