--- a/themes/beautifulhugo/layouts/_default/single.html
+++ b/themes/beautifulhugo/layouts/_default/single.html
@@ -6,6 +6,8 @@
         {{ .Content }}
       </article>
 
+<a href="https://github.com/SiloCityLabs/blog/edit/master/{{ .File.Path }}" class="pull-right">Make an edit</a>
+
 {{ if .Type | eq "post" }}
       <ul class="pager blog-pager">
         {{ if .PrevInSection }}
