--- a/themes/beautifulhugo/layouts/_default/single.html
+++ b/themes/beautifulhugo/layouts/_default/single.html
@@ -6,7 +6,10 @@
         {{ .Content }}
       </article>
 
-<a href="https://github.com/SiloCityLabs/blog/edit/master/content/{{ .File.Path }}" class="pull-right">Make an edit</a>
+<div class="pull-right">
+<a href="https://github.com/SiloCityLabs/blog/commits/master/content/{{ .File.Path }}">History</a> | 
+<a href="https://github.com/SiloCityLabs/blog/edit/master/content/{{ .File.Path }}">Make an edit</a>
+</div>
 
 {{ if .Type | eq "post" }}
       <ul class="pager blog-pager">
