--- a/themes/beautifulhugo/layouts/_default/single.html
+++ b/themes/beautifulhugo/layouts/_default/single.html
@@ -6,7 +6,7 @@
         {{ .Content }}
       </article>
 
-<div class="pull-right">
+<div class="clearfix pull-right">
 <a href="https://github.com/SiloCityLabs/blog/commits/master/content/{{ .File.Path }}">History</a> | 
 <a href="https://github.com/SiloCityLabs/blog/edit/master/content/{{ .File.Path }}">Make an edit</a>
 </div>
