--- a/themes/beautifulhugo/layouts/_default/single.html
+++ b/themes/beautifulhugo/layouts/_default/single.html
@@ -5,10 +5,11 @@
       <article role="main" class="blog-post">
         {{ .Content }}
       </article>
-
-<div class="clearfix pull-right">
+<div class="clearfix">
+<div class="pull-right">
 <a href="https://github.com/SiloCityLabs/blog/commits/master/content/{{ .File.Path }}">History</a> | 
 <a href="https://github.com/SiloCityLabs/blog/edit/master/content/{{ .File.Path }}">Make an edit</a>
+</div>
 </div>
 
 {{ if .Type | eq "post" }}
