--- a/themes/beautifulhugo/static/css/main.css
+++ b/themes/beautifulhugo/static/css/main.css
@@ -16,7 +16,7 @@ p {
 p a {
   /* text-decoration: underline */
   color: #0072d2;
-  word-break: break-all;
+  word-break: break-word;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
