--- a/themes/beautifulhugo/layouts/partials/nav.html
+++ b/themes/beautifulhugo/layouts/partials/nav.html
@@ -54,7 +54,7 @@
 
         {{ if isset .Site.Params "gcse" }}
           <li>
-            <a href="#modalSearch" data-toggle="modal" data-target="#modalSearch" style="outline: none;">
+            <a href="#modalSearch" data-toggle="modal" data-target="#modalSearch" style="outline: none;" onclick='setTimeout( $("#gsc-i-id1").focus(), 100)'>
               <span class="hidden-sm hidden-md hidden-lg">{{ i18n "gcseLabelShort" }}</span> <span id="searchGlyph" class="glyphicon glyphicon-search"></span>
             </a>
           </li>
