--- a/themes/beautifulhugo/layouts/partials/footer.html
+++ b/themes/beautifulhugo/layouts/partials/footer.html
@@ -37,7 +37,7 @@
           {{ end }}
           
           &nbsp;&bull;&nbsp;
-          Last built on {{ .Site.LastChange.Format "Jan 2, 2006 at 3:04pm (EST)" }}
+          Last built on {{ now.Format "Jan 2, 2006 at 3:04pm (EST)" }}
         </p>
         <p class="credits theme-by text-muted">
           {{ with .Site.Params.commit }}&nbsp;&bull;&nbsp;[<a href="{{.}}{{ getenv "GIT_COMMIT_SHA" }}">{{ getenv "GIT_COMMIT_SHA_SHORT" }}</a>]{{ end }}
