--- a/themes/beautifulhugo/layouts/partials/head.amp.html
+++ b/themes/beautifulhugo/layouts/partials/head.amp.html
@@ -9,8 +9,8 @@
   <meta name="twitter:title" content="{{ . | truncate 70 }}" />
 {{- end }}
 {{- with .Description | default .Params.subtitle | default .Summary }}
-  <meta name="description" content="{{ . }}">
-  <meta property="og:description" content="{{ . }}">
+  <meta name="description" content="{{ . | truncate 200 }}">
+  <meta property="og:description" content="{{ . | truncate 200 }}">
   <meta name="twitter:description" content="{{ . | truncate 200 }}">
 {{- end }}
   <meta name="author" content="{{ .Site.Author.name }}"/>
@@ -41,13 +41,10 @@
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+  <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
 
-  <style amp-custom>
-    {{ with resources.Get "css/bootstrap.amp.css" | minify }}
-      {{ .Content | safeCSS }}
-    {{ end }}
-    {{ with resources.Get "css/main.amp.css" | minify }}
-      {{ .Content | safeCSS }}
-    {{ end }}
-  </style>
+<style amp-custom>
+{{ with resources.Get "css/bootstrap.amp.css" | minify }}{{ .Content | safeCSS }}{{ end }}
+{{ with resources.Get "css/main.amp.css" | minify }}{{ .Content | safeCSS }}{{ end }}
+</style>
 </head>
