--- a/themes/beautifulhugo/layouts/partials/head.html
+++ b/themes/beautifulhugo/layouts/partials/head.html
@@ -9,8 +9,8 @@
   <meta name="twitter:title" content="{{ . | truncate 70 }}" />
 {{- end }}
 {{- with .Description | default .Params.subtitle | default .Summary }}
-  <meta name="description" content="{{ . }}">
-  <meta property="og:description" content="{{ . }}">
+  <meta name="description" content="{{ . | truncate 200 }}">
+  <meta property="og:description" content="{{ . | truncate 200 }}">
   <meta name="twitter:description" content="{{ . | truncate 200 }}">
 {{- end }}
   <meta name="author" content="{{ .Site.Author.name }}"/>
