--- a/themes/beautifulhugo/layouts/partials/head.html
+++ b/themes/beautifulhugo/layouts/partials/head.html
@@ -38,12 +38,13 @@
   {{ range .AlternativeOutputFormats -}}
     <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
   {{ end -}}
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
   <!-- Internal css -->
   {{ $cssmain := resources.Get "css/main.css" }}
   {{ $csshighlight := resources.Get "css/highlight.min.css" }}
-  {{ $cssall := slice $cssmain $csshighlight | resources.Concat "css/bundle.css" | resources.Minify }}
+  {{ $cssbootstrap := resources.Get "css/bootstrap.min.css" }}
+  {{ $cssfontello := resources.Get "css/fontello-embedded.css" }}
+  {{ $cssall := slice $cssbootstrap $csshighlight $cssfontello $cssmain  | resources.Concat "css/bundle.css" | resources.Minify }}
   <link rel="stylesheet" href="{{ $cssall.Permalink | absURL }}" />
   <!-- PWA / AMP shit -->
   <link rel="manifest" href="/manifest.webmanifest">
