--- a/themes/beautifulhugo/layouts/author/list.html
+++ b/themes/beautifulhugo/layouts/author/list.html
@@ -24,7 +24,7 @@
           </div>
         {{ end }}
         <hr />
-        <h2 id="article-section">Articles</h2>
+        <h2 id="article-section">Articles Written</h2>
         <div class="posts-list">
           {{ range .Paginator.Pages }}
             <ul>
