--- a/themes/beautifulhugo/layouts/shortcodes/image.html
+++ b/themes/beautifulhugo/layouts/shortcodes/image.html
@@ -1,8 +1,8 @@
 {{ if .Get "caption" }}
     <figure>
-        <img src="{{.Get "src" }}" alt="{{.Get "alt" }}"/>
+        <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="{{.Get "src" }}" alt="{{.Get "alt" }}"/>
         <figcaption>{{.Get "caption" }}</figcaption>
     </figure>
 {{ else }}
-    <img src="{{.Get "src" }}" alt="{{.Get "alt" }}"/>
+    <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="{{.Get "src" }}" alt="{{.Get "alt" }}"/>
 {{ end }}
