--- a/themes/beautifulhugo/layouts/partials/head.amp.html
+++ b/themes/beautifulhugo/layouts/partials/head.amp.html
@@ -42,6 +42,7 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
   <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+  <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 
 <style amp-custom>
 {{ with resources.Get "css/bootstrap.amp.css" | minify }}{{ .Content | safeCSS }}{{ end }}
