--- a/themes/beautifulhugo/layouts/_default/baseof.amp.html
+++ b/themes/beautifulhugo/layouts/_default/baseof.amp.html
@@ -4,6 +4,8 @@
   <body>
     {{ block "header" . }}{{ partial "header.amp.html" . }}{{ end }}
     {{ block "main" . }}{{ end }}
+    
+    <amp-auto-ads type="adsense" data-ad-client="ca-pub-6882852717412296"></amp-auto-ads>
   </body>
 </html>
 
