bootstrap fix and issue #46

--- a/themes/beautifulhugo/assets/css/main.css
+++ b/themes/beautifulhugo/assets/css/main.css
@@ -744,6 +744,9 @@ code {
 }
 
 /* --- Google Custom Search Engine Popup --- */
+#modalSearch {
+  outline: none;
+}
 #modalSearch table tr, #modalSearch table tr td, #modalSearch table tr th {
   border:none;
 }
