--- a/themes/beautifulhugo/layouts/partials/nav.html
+++ b/themes/beautifulhugo/layouts/partials/nav.html
@@ -54,7 +54,7 @@
 
         {{ if isset .Site.Params "gcse" }}
           <li>
-            <a href="#modalSearch" data-toggle="modal" data-target="#modalSearch" style="outline: none;" onclick="setTimeout( function(){ document.getElementById('gsc-i-id1').focus(); }, 400);">
+            <a id="searchBtn" href="#modalSearch" data-toggle="modal" data-target="#modalSearch">
               <span class="hidden-sm hidden-md hidden-lg">{{ i18n "gcseLabelShort" }}</span> <span id="searchGlyph" class="icon icon-search"></span>
             </a>
           </li>
