--- a/themes/beautifulhugo/layouts/partials/footer.html
+++ b/themes/beautifulhugo/layouts/partials/footer.html
@@ -37,10 +37,7 @@
           {{ end }}
           
           &nbsp;&bull;&nbsp;
-          <a href="https://github.com/SiloCityLabs/blog/" title="Github">Last built on {{ now.Format "Jan 2, 2006 at 3:04pm (EST)" }}</a>
-        </p>
-        <p class="credits theme-by text-muted">
-          {{ with .Site.Params.commit }}&nbsp;&bull;&nbsp;[<a href="{{.}}{{ getenv "GIT_COMMIT_SHA" }}">{{ getenv "GIT_COMMIT_SHA_SHORT" }}</a>]{{ end }}
+          <a id="gitBuild" href="https://github.com/SiloCityLabs/blog/" title="Github">Last built on ...</a>
         </p>
       </div>
     </div>
