--- a/themes/beautifulhugo/assets/css/main.css
+++ b/themes/beautifulhugo/assets/css/main.css
@@ -131,7 +131,7 @@ figure {
 /* --- Navbar --- */
 
 /* Hide this stuff for printing portfolio pages */
-@media print and (max-width: 600px){
+@media print{
   .navbar {
     display:none;
   }
