--- a/themes/beautifulhugo/assets/css/main.css
+++ b/themes/beautifulhugo/assets/css/main.css
@@ -128,6 +128,16 @@ figure {
   }
 }
 
+summary {
+  display: revert; /* bootstrap hides arrow */
+  cursor: pointer; /* make it look clickable */
+  /* mimic <pre> styling */
+  background: #f2f2f2;
+  padding: 0.5em 1em;
+  border: 1px solid #ccc;
+  border-radius: 0.2em;
+}
+
 /* --- Navbar --- */
 
 /* Hide this stuff for printing portfolio pages */
